<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_goods_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/line2"
    android:layout_width="@dimen/x1832"
    android:layout_height="@dimen/y97"
    android:layout_marginTop="@dimen/y43"
    android:background="@drawable/bg_goods_title">

    <TextView
        android:id="@+id/tv_barcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_66"
        android:text="@string/text_barcode"
        style="@style/GoodsTitleStyle" />

    <TextView
        android:id="@+id/tv_text_goods_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_362"
        android:text="@string/text_goods_name"
        style="@style/GoodsTitleStyle" />

    <TextView
        android:id="@+id/tv_text_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_937"
        android:text="@string/text_price"
        style="@style/GoodsTitleStyle" />

    <TextView
        android:id="@+id/tv_text_coupon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_1131"
        android:text="@string/text_coupon"
        style="@style/GoodsTitleStyle" />

    <TextView
        android:id="@+id/tv_text_subtotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_1327"
        android:text="@string/text_subtotal"
        style="@style/GoodsTitleStyle" />

    <TextView
        android:id="@+id/tv_text_goods_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_129"
        android:text="@string/text_count_weight"
        style="@style/GoodsTitleStyle" />


</androidx.constraintlayout.widget.ConstraintLayout>