<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/cb_combine_payment"
        style="@style/TextStyle"
        android:layout_width="@dimen/x233"
        android:layout_height="@dimen/y81"
        android:layout_marginStart="@dimen/x42"
        android:background="@drawable/bg_frame"
        android:button="@null"
        android:drawableStart="@drawable/check_box"
        android:drawablePadding="@dimen/x20"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/x25"
        android:text="@string/text_combined_payment"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_cash"
        app:layout_constraintEnd_toStartOf="@id/btn_alipay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_cash" />

    <!--支付宝-->
    <Button
        android:id="@+id/btn_alipay"
        style="@style/PayButtonStyle"
        android:layout_width="@dimen/pay_btn_width"
        android:layout_height="@dimen/pay_btn_height"
        android:background="@drawable/bg_pay_way_button"
        android:text="@string/text_alipay"
        app:layout_constraintBottom_toBottomOf="@id/btn_cash"
        app:layout_constraintStart_toEndOf="@id/cb_combine_payment"
        app:layout_constraintTop_toTopOf="@id/btn_cash" />

    <!--微信-->
    <Button
        android:id="@+id/btn_wechat"
        style="@style/PayButtonStyle"
        android:layout_width="@dimen/pay_btn_width"
        android:layout_height="@dimen/pay_btn_height"
        android:background="@drawable/bg_pay_way_button"
        android:text="@string/text_wechat"
        app:layout_constraintBottom_toBottomOf="@id/btn_cash"
        app:layout_constraintStart_toEndOf="@id/btn_alipay"
        app:layout_constraintTop_toTopOf="@id/btn_cash" />

    <Button
        android:id="@+id/btn_member"
        style="@style/PayButtonStyle"
        android:layout_width="@dimen/pay_btn_width"
        android:layout_height="@dimen/pay_btn_height"
        android:background="@drawable/bg_pay_way_button"
        android:text="@string/text_member_package"
        app:layout_constraintBottom_toBottomOf="@id/btn_cash"
        app:layout_constraintStart_toEndOf="@id/btn_wechat"
        app:layout_constraintTop_toTopOf="@id/btn_cash" />

    <!--现金-->
    <Button
        android:id="@+id/btn_cash"
        style="@style/PayButtonStyle"
        android:layout_width="@dimen/pay_btn_width"
        android:layout_height="@dimen/pay_btn_height"
        android:background="@drawable/bg_pay_way_button"
        android:text="@string/text_cash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_member"
        app:layout_constraintTop_toTopOf="parent" />

    <!--银行卡-->
    <Button
        android:id="@+id/btn_bank_card"
        style="@style/PayButtonStyle"
        android:layout_width="@dimen/pay_btn_width"
        android:layout_height="@dimen/pay_btn_height"
        android:background="@drawable/bg_pay_way_button"
        android:text="@string/text_bank_card"
        app:layout_constraintBottom_toBottomOf="@id/btn_cash"
        app:layout_constraintStart_toEndOf="@id/btn_cash"
        app:layout_constraintTop_toTopOf="@id/btn_cash" />


    <!--礼品卡-->
    <Button
        android:id="@+id/btn_gift_card"
        style="@style/PayButtonStyle"
        android:layout_width="@dimen/pay_btn_width"
        android:layout_height="@dimen/pay_btn_height"
        android:background="@drawable/bg_pay_way_button"
        android:text="@string/text_gift_card"
        app:layout_constraintBottom_toBottomOf="@id/btn_cash"
        app:layout_constraintStart_toEndOf="@id/btn_bank_card"
        app:layout_constraintTop_toTopOf="@id/btn_cash" />


</androidx.constraintlayout.widget.ConstraintLayout>