<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_login_frame">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="@dimen/x601"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/y95"
        android:paddingBottom="@dimen/y95"
        android:text="@string/text_dialog_title_clear"
        android:textColor="@color/color_505050"
        android:textSize="@dimen/x42"
        android:textStyle="bold" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/x601"
        android:layout_height="@dimen/y1"
        android:background="@color/color_d3d3d3"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <View
        android:id="@+id/view1"
        android:layout_width="@dimen/x1"
        android:layout_height="@dimen/y100"
        android:background="@color/color_d3d3d3"
        app:layout_constraintStart_toEndOf="@+id/dialog_cancel"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_width="@dimen/x300"
        android:layout_height="@dimen/y100"
        android:gravity="center"
        android:text="@string/text_dialog_cancel"
        android:textColor="@color/color_505050"
        android:textSize="@dimen/x33"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/dialog_submit"
        android:layout_width="@dimen/x300"
        android:layout_height="@dimen/y100"
        android:gravity="center"
        android:text="@string/text_dialog_submit"
        android:textColor="@color/color_4cbbac"
        android:textSize="@dimen/x33"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>